# vlm-benchmark-alfred

./: .gitignore  README.md  notebook.py  pyproject.toml
src/: main.py
src/alfred/: benchmark.py  object.py  task.py  trajectory.py  utils.py
